@@ -1,0 +1,19 @@
+pacman::p_load(xml2, rvest, tidyverse, textreadr, textshape)
+
+cliche_page <- 'https://raw.githubusercontent.com/dunckr/retext-cliches/master/retext-cliches.js' %>%
+    textreadr::download() 
+
+cliches <- cliche_page %>%
+    readLines() %>%
+    textshape::grab_match(
+        from = 'a chip off the old block',
+        to = 'young and vibrant'
+    ) %>%
+    stringi::stri_replace_all_regex('^\\s*\'|\',\\s*$', '')
+
+
+
+
+
+pax::new_data(cliches, stand.alone = TRUE)
+# pax:::roxdat(cliches)
